--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -238,3 +238,140 @@ If the similarity exceeds a threshold $\tau$, the frames are marked for merging.
 It takes the dynamic-rate sequence and repeats each frame according to its stored length, restoring a 12.5Hz fixed-rate sequence.
 
 A subsequent Transformer smooths the transitions between the repeated frames to produce the final unmerged feature sequence for the decoder.</a>
+
+## 3·FlexiCodec: A Dynamic Low-Frame-Rate Neural Audio Codec
+
+The core of our work is **FlexiCodec**, a neural audio codec designed to operate at very low average frame rates while preserving crucial semantic information.
+
+Unlike traditional codecs that use a fixed frame rate, FlexiCodec employs a **dynamic frame rate** mechanism that allocates more temporal resolution to information-dense regions of speech and less to information-sparse segments like silence or long vowels.
+
+This is achieved through an architecture that leverages **pre-trained ASR features to encode semantic-rich RVQ-1 tokens**, and to **guide the adaptive frame merging** process.
+
+The overall architecture, depicted in Figure~[fig:architecture](#fig:architecture), follows a dual-stream encoding, dynamic frame merging, quantization, and frame unmerging decoding pipeline.
+
+**Dual-Stream Feature Extraction**\quad
+FlexiCodec\ begins by processing a 16kHz speech waveform through two parallel encoders to decouple semantic and acoustic information:
+(1) An ASR Encoder, leveraging the pre-trained ASR model, extracts a sequence of semantic features $e_{s}\in R^{T\times d}$, where $T$ and $d$ denote the number of frames and the vector dimension.
+
+And
+(2) a convolutional codec encoder, downsampling the waveform to produce a sequence of waveform features $e_{a}\in R^{T\times d}$, also at a 12.5Hz frame rate.
+
+The codec encoder consists of 5 CNN blocks with strides [4,4,5,8,2] to gradually downsample the audio, giving $16000\text{Hz} \div (4 \times 4 \times 5 \times 8 \times 2) = 12.5\text{Hz}$.
+
+Each CNN block contains a strided 1D convolution followed by a ResNet[^He2016Deep].
+
+For the specific ASR model choice, we use pretrained SenseVoice-Small[^An2024Funaudiollm], a 230M-parameter, encoder-only Transformer model trained on 300k hours of data
+with CTC loss.
+
+We use its last layer (excluding its CTC logits prediction layers) hidden state  as the semantic feature.
+
+The model outputs 16.67Hz features; we downsample it to 12.5Hz using linear interpolation to align the frame rate with the acoustic stream.
+
+The ASR model is frozen during codec training.
+
+**Dynamic Frame Merging**\quad
+This module compresses the number of frames in a sequence, resulting in a sequence where some segments have lower than 12.5Hz frame rate.
+
+Our goal is to compress the frames with a minimal loss of semantic information
+by preferentially merging frames that are semantically similar (redundant).
+
+Inspired by DynTok[^Zhang2025DynTok] that used pre-trained image features for token compression, we reuse the extracted ASR feature to guide our merging process, shown in Figure [fig:mergingunmerging](#fig:mergingunmerging)(a).
+
+Specifically, let the 12.5Hz ASR feature vectors be $\{e_s[1], e_s[2], \dots, e_s[T]\}$.
+
+We first compute the cosine similarity between adjacent frames:
+$
+s_t = \cos\bigl(e_s[t],\,e_s[t+1]\bigr)\quad\text{for }t=1,\dots,T-1.
+$
+We then scan from left to right to form maximal contiguous segments \([i,\,i{+}1,\dots, j]\) whose adjacent similarities exceed a threshold \(\tau\):
+$
+\min_{t=i}^{j-1} s_t \;\ge\;\tau.
+$
+All frames in such a segment are merged into a single frame by averaging, applied to both the semantic and acoustic streams:
+\vspace{-2mm}
+$$\tilde e_s[k] \;=\; \frac{1}{\ell_k}\sum_{t=i}^{j} e_s[t],\quad \tilde e_a[k] \;=\; \frac{1}{\ell_k}\sum_{t=i}^{j} e_a[t],
+\quad \ell_k \;=\; j - i + 1.$$
+\vspace{-5mm}
+
+where \(\tilde e_s[k]\) is the $k$-th entry in the compressed frame sequence in the semantic stream, and \(\tilde e_a[k]\) is the sequence in the acoustic stream.
+
+We also record
+the length of each merged frame \(\ell_k\)
+as attributes, which are required to reconstruct the original fix-frame-rate sequence.
+
+We find that directly using the average-reduced sequence
+can degrade the naturalness of the reconstructed audio, particularly causing unnatural transitions between merged frames.
+
+To address this, we adopt a transformer with local windowed attention that processes an interleaved sequence of original and averaged frames (Fig.[fig:mergingunmerging](#fig:mergingunmerging)(a))[^Yang2025ALMTokenizer], [^Li2023Blip-2].
+
+This allows the merged tokens to query their adjacent context and produce refined, context-aware representations.
+
+A local attention is favored over global attention because it allows generalization to longer audios despite trained on fixed-length audio segments.
+
+**Frame Rate Flexibility**\quad
+FlexiCodec\ trains with a flexible merging threshold $\tau$, sampled across a range.
+
+This enables the model to support controllable frame rates at inference by adjusting $\tau$.
+
+At $\tau=1.0$ (no frame merging), FlexiCodec functions as a 12.5Hz fixed-frame-rate codec.
+
+At $\tau < 1.0$ (with frame merging), the average frame rate of the new sequence is lower than 12.5Hz, and is calculated as:
+$\frac{\text{Total number of frames after merging}}{\text{Audio duration in seconds}}$.
+
+Setting a lower $\tau$ decreases the average frame rate.
+
+**Semantic (RVQ-1) Quantization**\quad
+The dynamic-rate ASR features are quantized using a Finite Scalar Quantizer (FSQ)[^Mentzer2023Finite] to produce discrete semantic tokens (we denote as RVQ-1 tokens).
+
+FSQ projects the input representations $e_s$ into a $D$-dimensional low-rank space, where the value of each dimension is quantized using rounding operation ROUND into $L$ levels.
+
+The quantized low-rank vector $\bar{e}$ is subsequently projected back to the original dimension $\bar{e}$:
+$$
+\bar{e_s} = \mathrm{ROUND}\bigl(\mathrm{Proj}_{\text{down}}(e_s)\bigr),
+\quad
+\hat{e_s} = \mathrm{Proj}_{\text{up}}(\bar{e_s}).
+$$
+The semantic token index $q_s$ is obtained by:
+$q_s = \sum_{j=0}^{D-1}\bar{e_s}L^j$.
+
+Additionally, we wrap the FSQ block with small ConvNeXt[^Liu2022Convnet] blocks to increase its representation ability, and apply an L2 loss $L_\text{feat}$ to align the semantic token embeddings with the unquantized semantic features.
+
+**Acoustic (RVQ-rest) Quantization**\quad
+To encode the detailed acoustic information that is not captured in the semantic tokens, following[^Li2025DualCodec],
+we compute a residual by subtracting the dynamic-rate ASR feature from the dynamic-rate waveform feature.
+
+This residual is then quantized using an $(N-1)$-layer Residual Vector Quantization (RVQ)[^Zeghidour2021Soundstream]\footnote{We have not applied FSQ for acoustic quantization because FSQ
+is a single-layer quantization,
+and we have not discovered a multi-layer FSQ practice in literature.} module to produce acoustic tokens $q_{2:N}\in Z^{(N-1)\times\hat{T}}$, where $\hat{T}$ denotes the sequence length after frame merging.
+
+We employ quantizer dropout[^Zeghidour2021Soundstream] during training.
+
+That is, only the RVQ-1 to RVQ-$n$
+layers are subsequently decoded, where $n \in [1, N]$ is randomly chosen.
+
+When $n=1$, only the semantic encoding stream is used.
+
+**Frame Unmerging and Reconstruction**\quad
+To reconstruct the audio, the decoder path should reverse the dynamic compression\footnote{This is because the NAR codec decoder can only receive fixed-frame-rate sequence.
+
+It is also possible to generate audios directly from dynamic-rate tokens using an AR model, and we leave this as future work.}.
+
+The embedding features from the first $n$ chosen RVQ tokens are added to form a decoding feature representation.
+
+This dynamic-rate sequence is then passed to the Frame Unmerging Module, detailed in Figure [fig:mergingunmerging](#fig:mergingunmerging)(b).
+
+It uses the frame length attributes to expand the sequence back to 12.5Hz.
+
+It is followed by another Transformer with local attention to smooth the transitions and refine the feature representations.
+
+The resulting feature sequence is then fed into a convolutional codec decoder which mirrors the codec encoder, synthesizing the output waveform.
+
+FlexiCodec is trained end-to-end with a composite loss function:
+
+$$
+\mathcal{L} = \mathcal{L}_{\text{recon}} + \lambda_{\text{GAN}}\mathcal{L}_{\text{GAN}} + \lambda_{\text{RVQ}}\mathcal{L}_{\text{RVQ}} + \lambda_{\text{feat}}\mathcal{L}_{\text{feat}},
+$$
+
+where $\mathcal{L}_{\text{recon}}$ is a multi-scale L1 mel spectrogram reconstruction loss following[^Kumar2024High-Fidelity], $\mathcal{L}_{\text{GAN}}$ contains adversarial and feature matching losses for Multi-Period Discriminator (MPD)[^Kong2020Hifi-Gan] and Multi-Resolution Spectrogram Discriminator (MRSD)[^Kumar2024High-Fidelity], $\mathcal{L}_{\text{RVQ}}$ involves a L1 codebook update loss
+and a commitment loss for RVQ, whereas the FSQ module does not require a training loss.
+$\mathcal{L}_\text{feat}$ is the L2 feature alignment loss between the RVQ-1 semantic token embeddings and the unquantized semantic features.
