--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -375,3 +375,236 @@ $$
 where $\mathcal{L}_{\text{recon}}$ is a multi-scale L1 mel spectrogram reconstruction loss following[^Kumar2024High-Fidelity], $\mathcal{L}_{\text{GAN}}$ contains adversarial and feature matching losses for Multi-Period Discriminator (MPD)[^Kong2020Hifi-Gan] and Multi-Resolution Spectrogram Discriminator (MRSD)[^Kumar2024High-Fidelity], $\mathcal{L}_{\text{RVQ}}$ involves a L1 codebook update loss
 and a commitment loss for RVQ, whereas the FSQ module does not require a training loss.
 $\mathcal{L}_\text{feat}$ is the L2 feature alignment loss between the RVQ-1 semantic token embeddings and the unquantized semantic features.
+
+## 4·Experiments
+
+### Experimental Setup
+
+\paragraph{Codec Training Configuration}
+
+We use the 16kHz, 54k-hour Librilight-Large[^Kahn2020Libri-Light] dataset for training.
+
+Each model is trained for 800k steps on 8 Nvidia V100 32GB GPUs.
+
+We use a batch size of 5 samples per GPU; each sample is a 5 second audio segment.
+
+We use AdamW[^Loshchilov2017Decoupled] optimizer with $\text{lr=}1\times10^{-4}$, $\text{betas=}(0.8, 0.99)$; exponential learning rate with gamma=$0.999998$.
+
+In each step, the merging threshold $\tau$ is randomly chosen from $0.7\le\tau\le1.0$.
+
+We set the maximum frame length $\ell_k$ to $8$ so that each $\ell_k$ would take at most $log_28=3$ bits of storage.
+
+Each token in the local attention transformer can attend to $\ell_k=8$ tokens left and right.
+
+The FSQ module has $D=5$ dimensions each quantized to $L=8$ levels, resulting in $8^5=32768$ codebook entries.
+
+The RVQ-rest quantization has 24 RVQ layers, 4096 codebook entries per layer, and 512-dimensional codebook entries.
+
+FlexiCodec has 216M trainable parameters, in which the two frame merging modules each is 20M, and the frame unmerging module is 100M.
+
+\paragraph{Codec Evaluation Metrics}
+
+We evaluate on the 4 to 10 second subset of LibriSpeech-test-clean[^Panayotov2015Librispeech], comprising 1,088 audios.
+
+We evaluate one FlexiCodec on three frame rates: 12.5Hz (80ms hop size), 8.3Hz (120ms hop size), and 6.25Hz (160ms hop size).
+
+Since FlexiCodec has dynamic, controllable frame rate,
+we configure its $\tau=1.0, 0.91, 0.867$ for 12.5Hz, 8.3Hz, and 6.25Hz average frame rate, respectively.
+
+These $\tau$ settings have been determined based on trial runs on our test set.
+
+Our evaluations consist of the following semantic and acoustic testings:
+
+$\bullet$ **Semantic testing:**
+
+To evaluate the preservation of semantic content, we transcribe the codec reconstructed audio using a Hubert-Large-LS960-ft[^Hsu2021Hubert]
+
+ASR model and compute the word error rate (WER) against ground truth transcriptions.
+
+The testings include using RVQ-1 alone, and RVQ-1:8 (1 to 8 layers) tokens.
+
+Specifically, RVQ-1 tokens' semantic preservation relates to downstream model performance, where AR LMs only access RVQ-1 tokens[^Li2025DualCodec], [^Zhang2023Speechtokenizer].
+
+Evaluating RVQ-1:8 is a common choice of RVQ-based codecs, implying the acoustic compression quality[^D{\'e}fossez2024Moshi], [^Zhang2023Speechtokenizer].
+
+$\bullet$ **Acoustic testing:**
+
+We evaluate the reconstructed audio from RVQ1:8 tokens against the original audio.
+
+Metrics include the Perceptual Evaluation of Speech Quality (PESQ, narrow band) [^Rix2001Perceptual],
+Mel Cepstral Distortion (MCD) [^Kubichek1993Mel-Cepstral],
+speaker similarity (SIM, the cosine similarity between speaker embeddings extracted from a WavLM-large-based[^Chen2022Wavlm] speaker verification model),
+and a speech perceptual quality score from a neural Mean Opinion Score (MOS) predictor UTMOS[^Saeki2022Utmos].
+
+$\bullet$ **Additional semantic testing with ASR probing:**\quad
+Additionally, to evaluate the semantic alignment between FlexiCodec semantic tokens and text, we employ an \text{ASR probing task}[^Gong2025XY-Tokenizer], [^Zhang2023Speechtokenizer], adapted from XARES[^Zhang2025X-Ares] benchmark.
+
+We train a downstream Qwen2.5-0.5B-based[^Yang2025Qwen2.5]
+
+ASR model which is tasked with predicting the text transcription given FlexiCodec's RVQ-1 token embeddings.
+
+During
+training, only the parameters of an MLP adapter
+are updated.
+
+Models are trained on LibriSpeech train-clean-100 using cross entropy loss.
+
+We evaluate the ASR
+WER on LibriSpeech test-clean.
+
+The task's upper bound result is obtained by training with the unquantized SenseVoice-Small encoder feature.
+
+Due to the prolonged evaluation time of this task, we only conduct this task as an extended semantic testing in Section~[sec:ablation_dynamic_frame_rate](#sec:ablation_dynamic_frame_rate).
+
+![](visualizations/frame_rate_comparison_plots1.pdf)
+
+<a id="fig:very_low_frame_rate">Evaluation results on three very low frame rates.
+Each baseline system has been retrained for each target frame rate using the same recipe as FlexiCodec.</a>
+
+### Examining the Impact of Very Low Frame Rates
+
+\label{sec:exp_very_low_frame_rates}
+
+We first investigate the performance of representative audio codecs at very low frame rates.
+
+Since open-source baselines operating below 12.5Hz are unavailable, we created three new baseline versions by retraining DAC[^Kumar2024High-Fidelity] and DualCodec[^Li2025DualCodec] to operate at 12.5Hz, 8.3Hz, and 6.25Hz, respectively.
+
+To adapt these systems for lower frame rates,
+we increased their encoder downsampling rates and enlarged their codebook sizes to be consistent with FlexiCodec.
+
+Detailed configurations are provided in Appendix~[sec:appendix_more_information_retrained_baselines](#sec:appendix_more_information_retrained_baselines).
+
+Our findings are as follows.
+
+$\bullet$ **RVQ-1 tokens' semantic information preservation is challenging for very low frame rate codecs.\quad**
+
+As shown in Figure~[fig:very_low_frame_rate](#fig:very_low_frame_rate)(a),
+we see that the Word Error Rate (WER), evaluated on audios reconstructed from RVQ-1 tokens, increases substantially for DAC and DualCodec when the frame rate drops from 12.5Hz to 6.25Hz.
+
+At 12.5Hz, DualCodec achieves a 5.93\% WER, close to the ground truth (GT) 2.1\%.
+
+However, as its frame rate drops to 6.25Hz, its gap with GT significantly increases to 31.5\% vs. 2.1\%, indicating its **lower resolution tokens fail to capture the whole phonetic details.**
+
+Note that DualCodec architecture already improves WER over DAC thanks to its semantic augmentation using SSL features.
+
+Figure~[fig:very_low_frame_rate](#fig:very_low_frame_rate)(b) confirms this trend, though the performance gap is smaller when using more RVQ layers.
+
+$\bullet$ **FlexiCodec excels at semantic preservation, especially at the lowest frame rates.**
+
+In contrast, FlexiCodec maintains a low WER across all rates.
+
+At the most challenging 6.25Hz average frame rate, FlexiCodec achieves 4.15\% WER which is close to ground truth (2.1\%) and outperforms the best baseline (31.5\%).
+
+To explain FlexiCodec's superior semantic information retention, our further experiments suggest it is contributed by a combination of our proposed design choices, including the ASR-assisted encoding architecture, dynamic frame rate merging, FSQ, and Transformer modules.
+
+These modules are ablated in Appendix~[sec:appendix_ablation_study](#sec:appendix_ablation_study).
+
+We have found that a simple switching from DualCodec's SSL into FlexiCodec ASR feature is very useful and it achieves an RVQ1 WER of 6.0\% at 6.25Hz.
+
+Further improvements are particularly driven by the dynamic frame rate strategy, which we will detail in Section~[sec:ablation_dynamic_frame_rate](#sec:ablation_dynamic_frame_rate).
+
+$\bullet$ **Acoustic quality metrics show more moderate differences across systems and frame rates.**
+
+As shown in Figure~[fig:very_low_frame_rate](#fig:very_low_frame_rate)(c-e), the PESQ, MCD, SIM, and UTMOS metrics show that at each frame rate, FlexiCodec slightly outperforms DualCodec, followed by a larger gap with DAC.
+
+We observe that
+the gap between models does not substantially increase when changing to lower frame rates, but has been seen in the semantic testing.
+
+We think that the acoustic fidelity is more constrained by bitrate, and because the bitrates of the three systems are at the same level, the difference is not pronounced.
+
+### Analysis and Ablation of Dynamic Frame Rate
+
+\label{sec:ablation_dynamic_frame_rate}
+
+![](visualizations/phoneme_d2codec_correlation.pdf)
+
+<a id="fig:corr">Correlation between Flexi-Codec frame rate and phoneme rate at a fixed frame merging threshold $\tau$.
+Each data point is an audio in TIMIT dataset, representing the audio's average phoneme rate vs. average FlexiCodec frame rate.
+% It shows that FlexiCodec uses more frames for faster speaking utterance, vice versa.
+% Linear regression shows a pearson correlation $r=0.77$.</a>
+
+To understand the mechanism and performance of dynamic frame rate, we conduct a series of analyses and ablations shown in Figure~[fig:corr](#fig:corr) and Table~[tab:tau](#tab:tau)-[tab:frame_rate_ablations](#tab:frame_rate_ablations).
+
+Our findings are as follows.
+
+$\bullet$ **Dynamic frame merging effectively adapts to the underlying phonetic complexity of speech.**
+
+Figure~[fig:corr](#fig:corr) shows a strong positive correlation (Pearson $r=0.775$) between the utterance-level phoneme rate and FlexiCodec's frame rate on the TIMIT[^Garofolo1993Timit] subset.
+
+This demonstrates that FlexiCodec dynamically adjusts its token frame allocation in proportion to the phonetic density of the audio, assigning more frames to segments with faster speech and fewer frames to slower or silence regions.
+
+Such adaptivity enables efficient semantic compression by aligning token rate with semantic information density.
+
+The fitted line also shows a linear coefficient very close to $0.5$, indicating that each merged frame approximately encodes two phonemes.
+
+We visualize several cases by aligning phonemes labels with FlexiCodec frames, which is shown in Appendix~[appendix_sec:visualizaton](#appendix_sec:visualizaton).
+
+It confirms that typical merged tokens include syllables/short words, long vowels, and silence.
+
+$\bullet$ **Dynamic frame rate enables controllable frame rate as low as 3Hz.**\quad
+As shown in Table~[tab:tau](#tab:tau), the merging threshold $\tau$ controls frame rate and semantic preservation trade-off.
+
+Notably, by controlling $\tau$ values at inference time, we can obtain different output sequence lengths,
+which is a unique feature compared to conventional fixed-frame-rate codecs.
+
+$\bullet$ **Dynamic frame rate improves semantic information preservation.**\quad
+Tables~[tab:semantic_test](#tab:semantic_test) and [tab:frame_rate_ablations](#tab:frame_rate_ablations) compare FlexiCodec and its variants that are retrained with fixed frame rate (FFR).
+
+To obtain the FFR variants, we modify their codec encoder strides to output static 8.3Hz or 6.25Hz, and maintain the total parameter count (detailed in Appendix~[sec:appendix_more_information_retrained_baselines](#sec:appendix_more_information_retrained_baselines)).
+
+Table~[tab:semantic_test](#tab:semantic_test) shows that the FFR variants have consistently worse WERs than FlexiCodec.
+
+The gap is larger at the lower frame rate.
+
+Specifically, the 6.25Hz FFR variant increases RVQ-1 WER by a relative 26\%, the ASR probing WER by 21\%, and the RVQ1:8 WER by 8\%.
+
+These results highlight that dynamic frame rate improves semantic information preservation by a mechanism of phonetic complexity-adaptive frame rate allocation.
+
+We also note that dynamic frame rate may
+perform even better on real-world data, which tend to have longer silence regions that are highly compressible.
+
+We leave this investigation as future work.
+
+In terms of acoustic metrics, Table~[tab:frame_rate_ablations](#tab:frame_rate_ablations) shows that PESQ and UTMOS are the same between FlexiCodec and its FFR variant, while a moderate degradation in MCD and SIM is observed in FFR.
+
+This indicates that dynamic frame rate mainly boosts semantic preservation rather than low-level acoustic quality.
+
+One possible reason is that the acoustic information density in a speech can be misaligned with the semantic information density.
+
+For example, semantically unimportant segments may still contain acoustic details like noise, sound and music.
+
+### Comparison with Open-Source Codecs at Various Bitrates
+
+In this experiment, we compare FlexiCodec with open-source neural audio codecs spanning various bitrate
+and frame rates.
+
+Information about the baseline codecs are provided in Appendix~[sec:appendix_more_information_baseline_codec](#sec:appendix_more_information_baseline_codec).
+
+We categorize them into 3 bitrate classes, and
+FlexiCodec at 12.5Hz, 8.3Hz, and 6.25Hz average frame rates fall into each category, enabling bitrate-consistent comparisons.
+
+Table~[tab:tokenizer-rec-res](#tab:tokenizer-rec-res) presents the results.
+
+<a id="tab:tokenizer-rec-res">\text{Comparison between FlexiCodec and other open-source neural audio codecs.}
+\vspace{-4mm}</a>
+
+$\bullet$ **FlexiCodec has state-of-the-art audio quality at various bitrate levels.**\quad
+Examining the acoustic test scores, at $>$1kbps, FlexiCodec at 12.5Hz (1.2kbps)  achieves higher acoustic scores than its 12.5Hz counterparts Mimi, XYTokenizer and DualCodec.
+
+It only trails behind DAC which uses a higher bitate (6kbps).
+
+At 0.8kbps and 0.6kbps,
+FlexiCodec also demonstrates superior acoustic quality scores than baselines.
+
+These results demonstrate that
+FlexiCodec has a high bitrate efficiency.
+
+$\bullet$ **FlexiCodec is competitive to higher frame rate systems at semantic information preservation.**\quad
+Across the WER semantic test metrics at both RVQ1 and RVQ1:8 quantization levels,
+FlexiCodec consistently achieves competitive or better scores compared to other systems operating at higher frame rates.
+
+Notably,
+FlexiCodec at 6.25Hz attains an RVQ1 WER of 4.15,
+outperforming larger frame rate models such as SpeechTokenizer-50Hz, Encodec-75Hz, WavTokenizer-75Hz, etc.
+
+\vspace{-1mm}
