--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -608,3 +608,20 @@ FlexiCodec at 6.25Hz attains an RVQ1 WER of 4.15,
 outperforming larger frame rate models such as SpeechTokenizer-50Hz, Encodec-75Hz, WavTokenizer-75Hz, etc.
 
 \vspace{-1mm}
+
+## 5·More Experiments
+
+$\bullet$ **Downstream TTS experiments.**\quad
+In Appendix~[sec:appendix_tts](#sec:appendix_tts),
+we detail our low-frame-rate TTS system with FlexiCodec (FlexiCodec-TTS).
+
+Our conclusions are (1) FlexiCodec-TTS achieves competitive performance with significant speedups over baselines, and
+(2) a higher NAR frame rate is important for high audio quality, but using lower frame rates for AR does not necessarily degrade performance.
+
+$\bullet$ **Downstream audio understanding experiments.**\quad
+In Appendix~[sec:appendix_audio_understanding](#sec:appendix_audio_understanding), we show that FlexiCodec semantic token embeddings surpass other codecs in downstream audio understanding tasks, highlighting the potential to use FlexiCodec in unified multimodal understanding and generation frameworks.
+
+$\bullet$ **Ablation study on other components of FlexiCodec.**\quad
+In Appendix~[sec:appendix_ablation_study](#sec:appendix_ablation_study), we confirm our other design choices like utilizing an ASR feature, transformer-based frame merging and unmerging modules, and FSQ quantization are beneficial to our codec's semantic and acoustic performance.
+
+\vspace{-1mm}
