--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -625,3 +625,13 @@ $\bullet$ **Ablation study on other components of FlexiCodec.**\quad
 In Appendix~[sec:appendix_ablation_study](#sec:appendix_ablation_study), we confirm our other design choices like utilizing an ASR feature, transformer-based frame merging and unmerging modules, and FSQ quantization are beneficial to our codec's semantic and acoustic performance.
 
 \vspace{-1mm}
+
+## 6·Conclusion
+
+In this work, we introduced FlexiCodec, a novel neural audio codec designed for very low frame rate operation.
+
+By incorporating a dynamic frame rate, an ASR-assisted dual-stream architecture, and Transformer-based frame merging/unmerging modules, FlexiCodec effectively preserves semantic information at low rates.
+
+Experiments confirm its strong performance in low frame rate and low bitrate speech coding, controllable frame rate, and effectiveness in a downstream TTS system.
+
+Limitaion and future work are discussed in Appendix~[sec:appendix_limitation](#sec:appendix_limitation).
