--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -643,3 +643,13 @@ To ensure the reproducibility of our work, we provide comprehensive details on m
 All datasets used, including Librilight-Large, LibriSpeech, and TIMIT, are publicly available.
 
 The source code for FlexiCodec, along with scripts for data processing, training, and evaluation, is provided as supplementary material. **We will release our code under an open-source license after the review period.**
+
+## 8·Appendix
+
+\appendix
+
+![](visualizations/binder_merge_pattern1.pdf)
+
+<a id="fig:appendix_merge_patern_visualization">Visualizations of FlexiCodec dynamic-rate tokens aligned with TIMIT dataset phonemes.
+
+We visualize  four random utterances of different speakers speaking the same transcript "She had your dark suit in greasy wash water all year." The inferred content of each merged token is labeled in green font.</a>
