--- a/Models/Tokenizers/2025.10.01_FlexiCodec.md
+++ b/Models/Tokenizers/2025.10.01_FlexiCodec.md
@@ -681,3 +681,188 @@ Since merging boundaries are derived from pretrained ASR features without additi
 In this work, we reused the same ASR feature for both encoding semantic tokens and to derive the merging boundaries.
 
 We leave the exploration of more features as future works.
+
+## 10·Downstream Experiment: TTS
+
+\label{sec:appendix_tts}
+
+![](appendix_visualizations/tts_arch.pdf)
+
+<a id="fig:tts_architecture">Overview of FlexiCodec-TTS.
+(a) The AR LM has two lightweight prediction heads to predict FlexiCodec RVQ-1 token and corresponding frame lengths.
+(b) The NAR Stage predicts continuous features conditioned on stage 1 outputs.
+
+We experiment with 2 types of continuous features, \textcircled{1} 50Hz Mel Spectrogram, and \textcircled{2} 12.5Hz FlexiCodec feature.</a>
+
+### TTS Model Architecture
+
+We integrate FlexiCodec\ within an AR+NAR(Flow Matching) TTS framework.
+
+Our model architecture is
+inspired by CosyVoice[^Du2024CosyVoice].
+
+Modifications have been made in the AR and NAR stages mainly because FlexiCodec produces dynamic frame rate tokens.
+
+\paragraph{AR Stage}
+
+As shown in Figure~[fig:tts_architecture](#fig:tts_architecture)(a), this is a Transformer AR model that predicts FlexiCodec RVQ1 tokens.
+
+Different from previous systems, our model has two token prediction heads instead of one.
+
+This is because each FlexiCodec\ token includes an explicit "frame length" attribute.
+
+Therefore, we treat **duration modeling as an auxiliary classification task** by adding a second prediction head after the last hidden layer.
+
+Each prediction head is a lightweight linear projector.
+
+The LM input sequence is:
+\[
+\bigl[\circled{S}, \{{\mathbf{y}}_u\}_{u \in [1:U]}, \circled{M}, \{\text{Embed}({q}^{(s)}_t)+\text{Embed}(\mathbf{\ell}_{t-1})\}_{t \in [1:\hat{T}]}, \circled{E}\bigr]
+\]
+where $\circled{S}$, $\circled{M}$ and $\circled{E}$ denote the start, mid, and end separators. $\{{\mathbf{y}}_u\}_{u \in [1:U]}$ denotes the embedded phoneme sequence, $q_t^{(s)}$ is the  $t$-th FlexiCodec RVQ1 token, and $\ell_{t-1}$ is the frame length of the $t-1$-th RVQ1 token.
+
+For training, we employ next-token prediction with two parallel classification heads attached to the LM's last hidden state, to predict both $q_t^{(s)}$ and $\ell_{t-1}$.
+
+The composite loss $\mathcal{L}$ is calculated as $\mathcal{L} = \mathcal{L}_{\text{sem}} + \lambda\mathcal{L}_{\text{dur}}$, where:
+\[
+\mathcal{L}_{\text{sem}} = -\sum_{t=1}^{\hat T} \log P\bigl(q^{(s)}_t \mid p_{1:L}, q^{(s)}_{1:t-1}\bigr),
+\quad
+\mathcal{L}_{\text{dur}} = -\sum_{t=1}^{\hat T} \log P\bigl(\ell_t - 1 \mid p_{1:L}, q^{(s)}_{1:t-1}\bigr).
+\]
+During inference, the model is prefixed with the phoneme sequence and a prompt speech's RVQ1 (tokens and frame lengths).
+
+The remaining tokens and frame lengths are sampled autoregressively.
+
+\paragraph{Frame Rate Flexibility in AR stage}
+
+To enhance flexibility, the AR model is trained on sequences with either 12.5Hz, 8.3Hz, or 6.25Hz average frame rate, by setting various $\tau$ values when obtaining the RVQ1 tokens.
+
+To distinguish these sequences, a dedicated control token is prepended to the first audio token.
+
+During inference, the user can select from one of the three control tokens to specify an output frame rate.
+
+\paragraph{NAR Stage}
+
+In this stage, we aim to transform the predicted RVQ-1 sequence into audios with acoustic details.
+
+While previous works like VALL-E[^Wang2023Neural] and SoundStorm[^Borsos2023Soundstorm] have used NAR models to predict RVQ codec tokens,
+we have opted for predicting continuous features because low frame rate discrete tokens' acoustic quality upper bound is not as good as high frame rate (previously shown in Table~[tab:tokenizer-rec-res](#tab:tokenizer-rec-res)).
+
+Following other works[^Le2024Voicebox], [^Du2024CosyVoice], [^Zhang2025Vevo],
+we employ
+a conditional flow matching[^Lipman2022Flow].
+
+This allows us to experiment with two acoustic features with different frame rates, (1) the 50Hz Mel spectrogram (100 Mel bands following[^Zhang2025Vevo]), and (2) the 12.5Hz FlexiCodec feature (the feature labeled in dark green in Figure~[fig:architecture](#fig:architecture)).
+
+For (2), it is equivalent to predicting $n-1=23$ layers of RVQ-rest tokens simultaneously.
+
+As shown in Figure~[fig:tts_architecture](#fig:tts_architecture), the model is a flow matching transformer.
+
+During training, given a speech waveform $\mathbf{u}$
+and its acoustic feature $\mathbf{y}_1$, we randomly select a prefix of $\mathbf{y}_1$, denoted as $\mathbf{y}_1^{ctx}$, and aim to reconstruct the other part (denoted as $\mathbf{y}_1^{mis}$) conditioned on $\mathbf{y}_1^{ctx}$ and the FlexiCodec RVQ-1 tokens.
+
+To obtain the conditioning FlexiCodec RVQ-1 tokens,
+we first expand the dynamic-frame-rate RVQ-1 sequence $q_{1:\hat{T}}^{(s)}$ into 12.5Hz fixed frame rate sequence $q_{1:T}^{(s)}$ using frame lengths $\ell_{1:\hat{T}}$, and then linearly interpolat it to match the frame rate of $\mathbf{y}_1$.
+
+The rest of the formulation follows [^Zhang2025Vevo], [^Du2024CosyVoice], using a 300M Diffusion Transformer to approximate an optimal transport path between gaussian noise $\mathbf{y}_0$ and spectrogram $\mathbf{y}_1$.
+
+Classifier-free guidance (CFG) is applied by randomly dropping conditions during training and combining unconditional and conditional predictions during inference.
+
+During inference, we use 15 timesteps, and a CFG guidance strength of 1.5.
+
+To decode mel spectrogram, we use a pretrained Vocos[^Siuzdak2023Vocos] vocoder from the Amphion[^Li2025Overview], [^Zhang2023Amphion] toolkit.
+
+\paragraph{Frame Rate Flexibility in NAR stage}
+
+The NAR model supports decoding from either 12.5Hz, 8.3Hz, or 6.25Hz FlexiCodec RVQ-1 sequence.
+
+Its conditioning FlexiCodec RVQ-1 sequences are expanded from either 12.5Hz, 8.3Hz, or 6.25Hz average frame rate, by randomly choosing from corresponding $\tau$ values during training.
+
+We do not add additional tokens to distinguish these sequences because we find it yields the same results.
+
+### TTS Experiments
+
+\paragraph{TTS Training Configuration}
+
+We use the 16kHz, 50k-hour Libriheavy[^Kang2024Libriheavy] dataset for training.
+
+Each model is trained for 600k steps on 8 Nvidia V100 32GB GPUs.
+
+The AR model uses AdamW[^Loshchilov2017Decoupled] optimizer with $\text{lr=}1\times10^{-4}$, $\text{betas=}(0.5, 0.999)$;
+batch size is 96 seconds per GPU; gradient accumulation step is 3.
+
+The NAR models uses $\text{lr=}7.5\times10^{-5}$, $\text{betas=}(0.5, 0.999)$;
+batch size is 24 seconds per GPU; gradient accumulation step is 3.
+
+The AR model has 250M parameters; the NAR model has 300M parameters.
+
+\paragraph{TTS Evaluation Metrics}
+
+We use the E2TTS[^Eskimez2024E2] test suite\footnote{\url{https://github.com/microsoft/e2tts-test-suite}} to test our models.
+
+Its test data consists of 1,132 (reference, test) pairs
+from Librispeech-PC-test-clean[^Meister2023Librispeech-Pc].
+
+We evaluate both objective and subjective metrics.
+
+The objective metrics include word error rate (WER) and
+speaker similarity (SIM-o).
+
+We report the real-time factor (RTF) of each system tested on an RTX5000 GPU.
+
+RTF is calculated as the ratio of the total processing time to the total duration of generated audios.
+
+The WER metric uses a Hubert-Large-LS960-ft ASR system[^Hsu2021Hubert],
+and the SIM-o calculates the cosine similarity of speech samples
+of each test utterance against reference clips using  a WavLM-large-based speaker verification model.
+
+For subjective evaluations, we evaluate Naturalness Mean Opinion Score (NMOS) and Quality Mean Opinion Score (QMOS).
+
+For each MOS, six professional linguistic experts evaluate 10 audios per system.
+
+The human evaluation instructions are attached in Appendix~[sec:appendix_human](#sec:appendix_human).
+
+Baseline systems include E2TTS[^Eskimez2024E2], VALL-E[^Wang2023Neural], CosyVoice[^Du2024CosyVoice], and SparkTTS[^Wang2025Spark-TTS], FireRedTTS[^Guo2024FireRedTTS].
+
+<a id="tab:appendix_tts_results">TTS evaluation results.
+
+Systems with * are borrowed from official results.
+
+Each FlexiCodec-TTS is configured to work on each frame rate option without retraining.
+
+The actual average frame rate of FlexiCodec-TTS is calculated on all the generated audios during testing.</a>
+
+\paragraph{TTS Evaluation Results}
+
+We present the evaluation results in Table~[tab:appendix_tts_results](#tab:appendix_tts_results).
+
+Our analysis is as follows:
+
+$\bullet$ **FlexiCodec-TTS achieves competitive performance with significant speedups.**\quad
+The FlexiCodec-TTS model with a 50Hz NAR decoder demonstrates highly competitive performance across both objective and subjective metrics.
+
+At its 6.25Hz AR setting, it achieves a WER of 3.2\%, Naturalness MOS (NMOS) of 3.32 and a Quality MOS (QMOS) of 3.40, rivaling or exceeding strong baselines like CosyVoice (WER 3.2\%, NMOS 3.17, QMOS 3.32) and SparkTTS (WER 6.0\%, NMOS 3.15, QMOS 3.47).
+
+Crucially, this high perceptual quality is achieved with a significant reduction in computational cost.
+
+The 6.25Hz AR configuration has an RTF of just 0.07 for the autoregressive stage, representing a 7.3x speedup over CosyVoice’s AR model.
+
+Adding the inference time of 50Hz NAR, the total speedup is also substantial, at 3.4x.
+
+FlexiCodec-TTS using 12.5Hz NAR shows degraded performance, but still outperforms baselines like VALL-E and FireRedTTS, while achieving higher speedups.
+
+This balance of speed and quality makes FlexiCodec-TTS highly suitable for low-latency, resource-constrained applications.
+
+**$\bullet$ A higher NAR frame rate is important for high audio quality, but using lower frame rates for AR does not necessarily degrade performance.**\quad
+A comparison between our two FlexiCodec-TTS configurations reveals the distinct roles of the AR and NAR stages.
+
+Using a 50Hz NAR decoder consistently yields superior results over a 12.5Hz NAR across all metrics, including WER, SIM-o, NMOS, and QMOS.
+
+This confirms that a higher temporal resolution in the acoustic decoding stage is vital for reconstructing fine-grained details and preserving naturalness.
+
+Interestingly, for the AR stage, lower frame rates do not always degrade performance.
+
+With 50Hz NAR, the 8.3Hz and 6.25Hz AR configurations achieve comparable or even slightly better WER (2.5 vs. 2.5 vs. 3.2), SIM-o (0.64 vs. 0.65 vs. 0.65), and MOS scores compared to 12.5Hz AR.
+
+To explain this phenomenon, we suggest that (1) lower frame rate tokens might have better semantic and acoustic information disentanglement, and
+(2) a shorter sequence may alleviate the challenge of modeling long-range dependencies, allowing the Transformer to learn more effective attention patterns.
